tests/agl/rejections/type/pattern_unknown_field.agl
enum R
  | Pass
  | Fail(issues: list[text], code: int)
let r: R = Pass
case r of
  | Fail(x) => ()
  | Pass => ()
